--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="navbar">
+  <div class="navbar container">
     <img src="./img/igle.svg" alt="Логотип">
     <nav class="navigation">
       <ul class="nav-list">
@@ -27,6 +27,43 @@
       </ul>
     </nav>
   </div>
+
+  <!-- ./navbar -->
+
+  <header class="header container">
+    <img class="header-photo" src="./img/avatar.png" alt="avatar">
+    <!-- /.header-photo -->
+    <div class="header-text">
+      <strong class="header-strong">Привет 👋</strong>
+      <h1 class="header-geading"><span class="header-primary">Я фронтенд-разработчик и веб-дизайнер</span> <br>
+        Меня зовут Павел. Я делаю сайты для людей и компаний
+      </h1>
+      <div class="header-links">
+        <ul class="social-list">
+          <li class="social-item">
+            <a href="" class="social-link"><img src="./img/github.svg" alt="GitHub" class="social-logo"></a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"><img src="./img/telegram.svg" alt="telegram" class="social-logo"></a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"><img src="./img/whatsapp.svg" alt="whatsapp" class="social-logo"></a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"><img src="./img/vk.svg" alt="vk" class="social-logo"></a>
+          </li>
+        </ul>
+        <a href="#" class="cv-download" download>
+          <img src="./img/save.svg" alt="Прикрепить файл" class="cv-icon">
+          <span class="cv-text">Скачать резюме</span>
+        </a>
+      </div>
+      <!-- /.header-links -->
+    </div>
+    <!-- /.header-text -->
+  </header>
+  <!-- ./header -->
+
 </body>
 
 </html>
