--- a/index.html
+++ b/index.html
@@ -126,6 +126,66 @@
   </section>
   <!-- /.portfolio -->
 
+  <section class="developer container">
+    <img src="./img/photo.jpg" alt="Мое фото" class="developer-photo">
+    <div class="developer-about">
+      <span class="developer-hello">Рад вас видеть!</span>
+      <h2 class="developer-title">Я Павел</h2>
+      <p class="developer-text">
+        Я разрабатываю сайты для людей и компаний. Делаю всё сам: составляю прототип, дизайн-макет, пишу код.
+      </p>
+      <span class="motto">Дизайн. Код. Сопровождение...</span>
+      <p class="developer-text">Могу собрать страницу для вашей компании,
+        даже если запускать её нужно уже завтра. Из инструментов есть:
+        Tilda, Figma, HTML, CSS, JavaScript и Wordpress</p>
+      <img src="./img/avtograf.png" alt="Роспись" class="developer-sign">
+    </div>
+  </section>
+  <!-- /.developer -->
+
+  <section class="skills container">
+    <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
+    <ul class="tags">
+      <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+      <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+      <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+      <li class="tags-item"><a href="#" class="tag">WordPress</a></li>
+      <li class="tags-item"><a href="#" class="tag">npm</a></li>
+      <li class="tags-item"><a href="#" class="tag">SASS</a></li>
+    </ul>
+  </section>
+  <!-- /.skills container -->
+
+  <section class="feedback form-container">
+    <h2 class="feedback-title">Готов обсудить проект...</h2>
+    <form action="#" class="form">
+      <div class="input-group">
+        <label class="input-label" for="userName">Имя</label>
+        <input id="userName" type="text" class="input">
+      </div>
+
+      <div class="input-group">
+        <label class="input-label" for="userEmail">Email</label>
+        <input id="userEmail" type="email" class="input">
+      </div>
+
+      <div class="input-group">
+        <label class="input-label" for="userMessage">Сообщение</label>
+        <textarea id="userMessage" cols="30" rows="10" class="input textarea"></textarea>
+      </div>
+
+      <div class="button-group">
+        <button type="submit" class="submit-button" download>
+          <img src="./img/IconTeleg.svg" alt="Прикрепить файл" class="cv-icon">
+          <span class="cv-text">Отправить</span>
+        </button>
+      </div>
+
+    </form>
+
+  </section>
+  <!-- /.feedback -->
+
 </body>
 
 </html>
