--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <img src="./img/igle.svg" alt="Логотип">
     <nav class="navigation">
       <ul class="nav-list">
-        <li class="nav-item"><a href="#" class="nav-link active">Главная</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Обо&nbsp;мне</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
+        <li class="nav-item"><a href="#main" class="nav-link active">Главная</a></li>
+        <li class="nav-item"><a href="#portfolio" class="nav-link">Проекты</a></li>
+        <li class="nav-item"><a href="#developer" class="nav-link">Обо&nbsp;мне</a></li>
+        <li class="nav-item"><a href="#feedback" class="nav-link">Связаться</a></li>
       </ul>
     </nav>
   </div>
 
   <!-- ./navbar -->
 
-  <header class="header container">
+  <header class="header container" id="main">
     <img class="header-photo" src="./img/avatar.png" alt="avatar">
     <!-- /.header-photo -->
     <div class="header-text">
@@ -53,7 +53,7 @@
             <a href="" class="social-link"><img src="./img/vk.svg" alt="vk" class="social-logo"></a>
           </li>
         </ul>
-        <a href="#" class="cv-download" download>
+        <a href="./resume.docx" class="cv-download" download>
           <img src="./img/save.svg" alt="Прикрепить файл" class="cv-icon">
           <span class="cv-text">Скачать резюме</span>
         </a>
@@ -64,69 +64,67 @@
   </header>
   <!-- ./header -->
 
-  <section class="portfolio">
-    <div class="container">
-      <h2 class="section-header">Последние проекты</h2>
-      <div class="cards">
-        <div class="card">
-          <img src="./img/portfolio/image1.jpg" alt="Название проекта" class="card-image">
-          <div class="card-text-wrapper">
-            <h3 class="card-title">Мобильное приложение</h3>
-            <ul class="tags">
-              <li class="tags-item"><a href="#" class="tag">HTML</a></li>
-              <li class="tags-item"><a href="#" class="tag">CSS</a></li>
-              <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
-              <li class="tags-item"><a href="#" class="tag">Git</a></li>
-              <li class="tags-item"><a href="#" class="tag">Vitejs</a></li>
-            </ul>
-            <p class="card-text">
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-              laborum.
-            </p>
-            <div class="card-buttons">
-              <a href="" class="card-button">
-                <img src="./img/Icon_tag.svg" alt="icon" class="card-button-icon">
-                <span class="card-button-text">Код</span>
-              </a>
-              <a href="" class="card-button">
-                <img src="./img/Icon_check.svg" alt="icon" class="card-button-icon">
-                <span class="card-button-text">Демо</span>
-              </a>
-            </div>
+  <section class="portfolio container" id="portfolio">
+    <h2 class="section-header">Последние проекты</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="./img/portfolio/image1.jpg" alt="Название проекта" class="card-image">
+        <div class="card-text-wrapper">
+          <h3 class="card-title">Мобильное приложение</h3>
+          <ul class="tags">
+            <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+            <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+            <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+            <li class="tags-item"><a href="#" class="tag">Git</a></li>
+            <li class="tags-item"><a href="#" class="tag">Vitejs</a></li>
+          </ul>
+          <p class="card-text">
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.
+          </p>
+          <div class="card-buttons">
+            <a href="" class="card-button">
+              <img src="./img/Icon_tag.svg" alt="icon" class="card-button-icon">
+              <span class="card-button-text">Код</span>
+            </a>
+            <a href="" class="card-button">
+              <img src="./img/Icon_check.svg" alt="icon" class="card-button-icon">
+              <span class="card-button-text">Демо</span>
+            </a>
           </div>
         </div>
-
-        <div class="card">
-          <img src="./img/portfolio/image2.jpg" alt="Название проекта" class="card-image">
-          <div class="card-text-wrapper">
-            <h3 class="card-title">Одностраничный промо-сайт</h3>
-            <ul class="tags">
-              <li class="tags-item"><a href="#" class="tag">HTML</a></li>
-              <li class="tags-item"><a href="#" class="tag">CSS</a></li>
-            </ul>
-            <p class="card-text">
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-              laborum.
-            </p>
-            <div class="card-buttons">
-              <a href="" class="card-button">
-                <img src="./img/Icon_tag.svg" alt="icon" class="card-button-icon">
-                <span class="card-button-text">Код</span>
-              </a>
-              <a href="" class="card-button">
-                <img src="./img/Icon_check.svg" alt="icon" class="card-button-icon">
-                <span class="card-button-text">Демо</span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- /.card -->
       </div>
+
+      <div class="card">
+        <img src="./img/portfolio/image2.jpg" alt="Название проекта" class="card-image">
+        <div class="card-text-wrapper">
+          <h3 class="card-title">Одностраничный промо-сайт</h3>
+          <ul class="tags">
+            <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+            <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+          </ul>
+          <p class="card-text">
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.
+          </p>
+          <div class="card-buttons">
+            <a href="" class="card-button">
+              <img src="./img/Icon_tag.svg" alt="icon" class="card-button-icon">
+              <span class="card-button-text">Код</span>
+            </a>
+            <a href="" class="card-button">
+              <img src="./img/Icon_check.svg" alt="icon" class="card-button-icon">
+              <span class="card-button-text">Демо</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- /.card -->
     </div>
   </section>
   <!-- /.portfolio -->
 
-  <section class="developer container">
+  <section class="developer container" id="developer">
     <img src="./img/photo.jpg" alt="Мое фото" class="developer-photo">
     <div class="developer-about">
       <span class="developer-hello">Рад вас видеть!</span>
@@ -143,7 +141,7 @@
   </section>
   <!-- /.developer -->
 
-  <section class="skills container">
+  <section class="skills container" id="skills">
     <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
     <ul class="tags">
       <li class="tags-item"><a href="#" class="tag">HTML</a></li>
@@ -156,33 +154,35 @@
   </section>
   <!-- /.skills container -->
 
-  <section class="feedback form-container">
-    <h2 class="feedback-title">Готов обсудить проект...</h2>
-    <form action="#" class="form">
-      <div class="input-group">
-        <label class="input-label" for="userName">Имя</label>
-        <input id="userName" type="text" class="input">
-      </div>
+  <section class="feedback" id="feedback">
+    <img src="./img/hand.png" alt="Рука" class="feedback-hand">
+    <div class="form-container">
+      <h2 class="feedback-title">Готов обсудить проект...</h2>
+      <form action="#" class="form">
+        <div class="input-group">
+          <label class="input-label" for="userName">Имя</label>
+          <input id="userName" type="text" class="input">
+        </div>
 
-      <div class="input-group">
-        <label class="input-label" for="userEmail">Email</label>
-        <input id="userEmail" type="email" class="input">
-      </div>
+        <div class="input-group">
+          <label class="input-label" for="userEmail">Email</label>
+          <input id="userEmail" type="email" class="input">
+        </div>
 
-      <div class="input-group">
-        <label class="input-label" for="userMessage">Сообщение</label>
-        <textarea id="userMessage" cols="30" rows="10" class="input textarea"></textarea>
-      </div>
+        <div class="input-group">
+          <label class="input-label" for="userMessage">Сообщение</label>
+          <textarea id="userMessage" cols="30" rows="10" class="input textarea"></textarea>
+        </div>
 
-      <div class="button-group">
-        <button type="submit" class="submit-button" download>
-          <img src="./img/IconTeleg.svg" alt="Прикрепить файл" class="cv-icon">
-          <span class="cv-text">Отправить</span>
-        </button>
-      </div>
+        <div class="button-group">
+          <button type="submit" class="submit-button" download>
+            <img src="./img/IconTeleg.svg" alt="Прикрепить файл" class="cv-icon">
+            <span class="cv-text">Отправить</span>
+          </button>
+        </div>
 
-    </form>
-
+      </form>
+    </div>
   </section>
   <!-- /.feedback -->
 
